@@ -1,3 +1,8 @@
+2008-03-22  kitone  <kitone@gna.org>
+
+	* src/actions/WaveformRendererGL.cc:
+	Fixed when the waveform has changed, the display list need to be update.
+
 2008-03-19  kitone  <kitone@gna.org>
 
 	* src/actions/WaveformRenderer.cc:
